--- a/style.css
+++ b/style.css
@@ -1,27 +1,18 @@
-.jumbo-title{
-    font-family: 'Nunito';
-    font-size: 100pt;
-}
-
-.jumbo-subtitle {
-    margin-top: -35px;
-    margin-left: 35px;
-    font-family: 'Nunito';
-    font-size: 20pt
-}
-
-.navbar {
-    margin-top: -100px;
-}
-
-#weather-icon img {
-    margin-left: 77px;
+.jumbotron-title{
+    font-family: 'Catamaran';
+    font-size: 150pt;
+    font-weight: 900;
 }
 
 .card-body h1{
     font-size: 55pt;
     text-align: left;
 }
+
+.navbar {
+    margin-top: -100px;
+}
+
 
 .city-name {
     font-size: 25pt;
@@ -32,8 +23,17 @@
     text-align: left;
 }
 
+.jumbotron-subtitle {
+    font-style: italic;
+    margin-top: -50px;
+    margin-left: 35px;
+    font-family: 'Nunito';
+    font-weight: 200;
+    font-size: 18pt
+}
+
 #five-day-title {
-    padding: 5px;
+    padding: 8px;
     margin: 10px;
     text-align: left;
 }
